cmake_minimum_required(VERSION 3.21)
project(Lab3)

set(CMAKE_CXX_STANDARD 20)

add_executable(Lab3 main.cpp ErrorInfo.hpp DynamicArray.hpp LinkedList.hpp ArraySequence.hpp ListSequence.hpp Sequence.hpp Test.hpp MapWhereReduce.hpp print.hpp SquareMatrix.hpp RectangleMatrix.hpp TriangleMatrix.hpp ComplexNumbers.hpp Sum.hpp)
